Use primitive int lists everywhere to reduce memory overhead and avoid overhead of boxing / unboxing ints